force-app/main/default/objects/smagicinteract__Action__c/fields/smagicinteract__Action_To_Perform__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Action_To_Perform__c</fullName>
    <description>This field contains the Action type to perform The type can be: Create Lead or Case or Task.</description>
    <label>Action To Perform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Convert Lead</fullName>
            </value>
            <value>
                <fullName>Create Record</fullName>
            </value>
            <value>
                <fullName>Edit Record</fullName>
            </value>
            <value>
                <fullName>Open Url</fullName>
            </value>
            <value>
                <fullName>Post To Chatter</fullName>
            </value>
            <value>
                <fullName>View Record</fullName>
            </value>
            <value>
                <fullName>ConvertLead</fullName>
                <isActive>false</isActive>
                <label>ConvertLead</label>
            </value>
            <value>
                <fullName>OpenUrl</fullName>
                <isActive>false</isActive>
                <label>OpenUrl</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>