force-app/main/default/objects/smagicinteract__Action__c/fields/smagicinteract__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Action_Type__c</fullName>
    <description>This field contains the Action type. The type can be: Automated or Manual.</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>