force-app/main/default/objects/smagicinteract__Action__c/fields/smagicinteract__Description__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Description__c</fullName>
    <description>This field contains the description of the Action.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>