force-app/main/default/objects/smagicinteract__Action__c/fields/smagicinteract__Status__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Status__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked displays CRM action on Conversation View.</description>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>