force-app/main/default/objects/smagicinteract__Action__c/listViews/smagicinteract__All.listView-meta.xml
<ListView>
    <fullName>smagicinteract__All</fullName>
    <columns>NAME</columns>
    <columns>smagicinteract__Action_To_Perform__c</columns>
    <columns>smagicinteract__Action_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>